force-app/main/default/objects/Account/fields/conta__c.field-meta.xml
<CustomField>
    <fullName>conta__c</fullName>
    <label>conta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>