force-app/main/default/objects/Account/fields/NOP__c.field-meta.xml
<CustomField>
    <fullName>NOP__c</fullName>
    <label>NOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>