force-app/main/default/objects/Account/fields/OpportunitySum__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySum__c</fullName>
    <label>OpportunitySum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>