force-app/main/default/objects/Account/fields/PipelineAmount__c.field-meta.xml
<CustomField>
    <fullName>PipelineAmount__c</fullName>
    <label>PipelineAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>