force-app/main/default/objects/Account/fields/RollUp_Amount_X__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Amount_X__c</fullName>
    <label>RollUp_Amount_X</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>