force-app/main/default/objects/Account/fields/SumTotal__c.field-meta.xml
<CustomField>
    <fullName>SumTotal__c</fullName>
    <label>SumTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>